kubernetes-security/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-homework-service
  namespace: homework
  labels:
    app: my-app
spec:
  selector:
    app: homework
  ports:
    - port: 8000
      targetPort: 8000
      name: http  
  type: ClusterIP
