kubernetes-security/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-homework-ingress
  namespace: homework
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: homework.otus
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-homework-service
            port:
              number: 8000
  ingressClassName: nginx
